src/objects/CEP_Intake__c.object
<CustomObject>
    <fields>
        <fullName>AssessmentContainerId__c</fullName>
        <label>AssessmentContainerId</label>
        <referenceTo>AssessmentContainer__c</referenceTo>
        <relationshipLabel>aCEP Intakes</relationshipLabel>
        <relationshipName>aCEP_Intakes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Education_Section_1__c</fullName>
        <label>Education Section</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employment_Section_1__c</fullName>
        <label>Employment Section</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Family_Background__c</fullName>
        <inlineHelpText>Describe family background (ethnicity, place of birth, where raised and by whom, current significant familial relationships, who does participant live with now?). Note LSCMI questions re: positive family relationships.</inlineHelpText>
        <label>Family Background</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Health__c</fullName>
        <label>Health</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legal__c</fullName>
        <label>Legal</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Leisure_Recreation_Notes__c</fullName>
        <label>Leisure/Recreation Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <label>aCEP Intake</label>
    <nameField>
        <label>aCEP Intake Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>aCEP Intakes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>